--- a/LightWorkflow/Sago.Framework.Workflow.Core/Sago.Framework.Workflow.Core.csproj
+++ b/LightWorkflow/Sago.Framework.Workflow.Core/Sago.Framework.Workflow.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B200A691-6632-4F3B-A2EF-ED9BFE841D5A}</ProjectGuid>
+    <ProjectGuid>{A3412C1C-4D72-438B-AE76-8F21D3852533}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sago.Framework.WorkFlow</RootNamespace>
-    <AssemblyName>Sago.Framework.WorkFlow</AssemblyName>
+    <RootNamespace>Sago.Framework.Workflow.Core</RootNamespace>
+    <AssemblyName>Sago.Framework.Workflow.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,19 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contract\IProcess.cs" />
-    <Compile Include="Contract\IProcessModule.cs" />
-    <Compile Include="Contract\IProcessNode.cs" />
-    <Compile Include="Contract\IRoute.cs" />
-    <Compile Include="Contract\ISubmitArgs.cs" />
-    <Compile Include="Entities\DefaultRoute.cs" />
-    <Compile Include="Entities\DefaultSubmitArgs.cs" />
-    <Compile Include="Entities\ProcessAction.cs" />
-    <Compile Include="Entities\ProcessNodeEventArgs.cs" />
-    <Compile Include="Helper\BizContextHelper.cs" />
-    <Compile Include="Helper\ModuleFactory.cs" />
+    <Compile Include="DefaultFeatures\Entities\ProcessInstance.cs" />
+    <Compile Include="DefaultFeatures\Entities\ProcessNodeInstance.cs" />
+    <Compile Include="DefaultFeatures\WorkflowEngine.cs" />
+    <Compile Include="Global.cs" />
+    <Compile Include="Interfaces\IDataTransformer.cs" />
+    <Compile Include="Interfaces\IPersistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkflowEngine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
